Correcciones redaccion v2 | DB

--- a/4º Año/Bases de Datos/Unidad 4/2. Vistas y Restricciones de Integridad.md
+++ b/4º Año/Bases de Datos/Unidad 4/2. Vistas y Restricciones de Integridad.md
@@ -1,24 +1,24 @@
 ## Vistas en las Bases de Datos
 
-Las vistas representa un conjunto de resultados de una consulta predefinida. Funciona como una "ventana" o "vista" de una tabla o combinación de tablas, pero no almacena datos por sí misma. En cambio, genera sus resultados cada vez que se la consulta, basándose en la consulta SQL que la define. Provee un mecanismo para ocultar datos de la para ciertos usuarios. En el siguiente ejemplo se muestra como se crea una vista en SQL:
+Las vistas representa un conjunto de resultados de una consulta predefinida. Funciona como una "ventana" o "vista" de una tabla o combinación de tablas, pero no almacena datos por sí misma. En cambio, genera sus resultados cada vez que se la consulta, basándose en la consulta SQL que la define. Provee un mecanismo para ocultar datos para ciertos usuarios. En el siguiente ejemplo se muestra como se crea una vista en SQL:
 
 ```sql
 -- Una vista que contiene el nombre de la sucursal y de los clientes que tienen
 -- una cuenta o un prestamo en una sucursal
 CREATE VIEW total_clientes AS
-	(SELECT nombre_sucursal, nombre_cliente
+	SELECT nombre_sucursal, nombre_cliente
 		FROM depositante, cuenta
 		WHERE depositante.nro_cuenta = cuenta.nro_cuenta)
-   UNION
-	(SELECT nombre_sucursal, nombre_cliente
-		FROM prestatario, prestamo
+    UNION
+	SELECT nombre_sucursal, nombre_cliente
+	    FROM prestatario, prestamo
 		WHERE prestatario.nro_prestamo = prestamo.nro_prestamo)
 ```
 
 Cuando se define una vista, también se puede especificar el esquema que esta tendrá, además se pueden realizar operaciones de `JOIN`, y/o subconsultas, por ejemplo:
 
 ```sql
-CREATE view prestamo_sucursal(nombre_sucursal, num_prestamo, ciudad_sucursal) AS
+CREATE VIEW prestamo_sucursal(nombre_sucursal, num_prestamo, ciudad_sucursal) AS
 	SELECT S.nombre_sucursal, P.nro_prestamo, S.ciudad_sucursal
 	FROM prestamo P, sucursal S
 	WHERE P.nombre_sucursal = S.nombre_sucursal
@@ -69,7 +69,7 @@ En el caso de que se inserten valores utilizando una consulta, se debe asegurar 
 >```
 >Debido que en la mayoría de los casos este tipo de consultas se realizan desde las aplicaciones, es recomendable siempre que se especifique el esquema de las tablas cuando se agreguen datos, tal y como se muestra en el ejemplo dado arriba, más aun si se agregan valores nulos o por defecto.
 
-Al igual que la inserción y la eliminación de datos SQL te permite elegir las tuplas y los atributos que se actualizarán. Esta actualización se realiza a través de la cláusula `UPDATE`, luego mediante una cláusula `SET` se especifica el nuevo valor. Veamos un par de ejemplos:
+Al igual que la inserción y la eliminación de datos, SQL te permite elegir las tuplas y los atributos que se actualizarán. Esta actualización se realiza a través de la cláusula `UPDATE`, luego mediante una cláusula `SET` se especifica el nuevo valor. Veamos un par de ejemplos:
 
 ```sql
 -- Actualiza el saldo de las cuentas de los clientes, sumandole el interes anual
@@ -99,7 +99,7 @@ UPDATE cuenta
 Las restricciones de integridad garantizan que las modificaciones realizadas en la base de datos por los usuarios autorizados no den lugar a una pérdida de la consistencia de los datos. Por tanto, las restricciones de integridad protegen contra daños accidentales a las bases de datos. Idealmente por cuestiones de practicidad y ahorros de tiempo, el control de integridad no debe depender de las aplicaciones, ya sea la base de datos o el mismo sistema de archivos.
 Las restricciones pueden aplicarse en los siguientes ámbitos:
 
-- **Restricciones de Dominio**: La declaración de que un atributo pertenezca a un determinado dominio actúa como una restricción sobre los valores que puede tomar. El objetivo de los dominios es similar al de los tipos de datos en los lenguajes de programación convencionales. La cláusula `CHECK` le permite al diseñador del esquema especificar un predicado que debe satisfacer cualquier valor asignado a una variable cuyo tipo sea el dominio.
+- **Restricciones de Dominio**: La declaración para que un atributo pertenezca a un determinado dominio actúa como una restricción sobre los valores que puede tomar. El objetivo de los dominios es similar al de los tipos de datos en los lenguajes de programación convencionales. La cláusula `CHECK` le permite al diseñador del esquema especificar un predicado que debe satisfacer cualquier valor asignado a una variable cuyo tipo sea el dominio.
 
 >[!tldr] Creación de Dominios Propios
 >El estándar de SQL define que el usuario puede definir dominios y asignarlo a distintos atributos en las diferentes tablas de una base de datos, con la particularidad de que también se pueden especificar más restricciones para estos dominios.
