--- a/4º Año/Bases de Datos/Unidad 4/4. SQL Embebido y SQL Dinamico.md
+++ b/4º Año/Bases de Datos/Unidad 4/4. SQL Embebido y SQL Dinamico.md
@@ -3,7 +3,7 @@ SQL proporciona un lenguaje de consultas declarativo muy potente. La formulació
 ## SQL Embebido
 
 La norma SQL define la utilización de SQL dentro de varios lenguajes de programación, tales como C, Cobol, Pascal, Java, PL/I y Fortran. Un lenguaje en el cual se introducen consultas SQL se denomina lenguaje anfitrión y las estructuras SQL que se admiten en el lenguaje anfitrión constituyen SQL embebido. Para identificar las consultas de SQL embebido, se utiliza la instrucción EXEC SQL, aunque su sintáxis puede variar. Por ejemplo, la incorporación de SQL en Java usa la sintaxis `SQL { <instrucción de SQL embebido > };`.
-También se pueden crear cursores, los cuales actúan como iteradores que se utilizan para recorrer los registros fila por fila o simplemente para almacenar los resultados de la consulta SQL. Estos cursores deben ser declarados en el lenguaje anfitrión, luego abiertos para poder obtener evaluar la consulta, luego utilizar la instrucción `fetch` para obtener cada uno de los resultados de la consulta en una variable del lenguaje anfitrión, una ves se haya hecho esto se cierra el cursos.
+También se pueden crear cursores, los cuales actúan como iteradores que se utilizan para recorrer los registros fila por fila o simplemente para almacenar los resultados de la consulta SQL. Estos cursores deben ser declarados en el lenguaje anfitrión, luego abiertos para poder evaluar la consulta, luego utilizar la instrucción `fetch` para obtener cada uno de los resultados de la consulta en una variable del lenguaje anfitrión, una ves se haya hecho esto se cierra el cursos.
 
 ## SQL Dinámico
 
