--- a/4º Año/Bases de Datos/Unidad 5/1. Seguridad en Bases de Datos.md
+++ b/4º Año/Bases de Datos/Unidad 5/1. Seguridad en Bases de Datos.md
@@ -49,3 +49,4 @@ Las bases de datos estadísticas son aquellas que proveen datos en forma de un c
 La encriptación es un medio de mantener datos seguros en un entorno inseguro. Consiste en aplicar un algoritmo de encriptación de datos usando alguna clave de encriptación. Los datos resultantes tienen que ser desencriptados usando una clave de desencriptado para recuperar los datos originales.
 Algunos de los algoritmos más conocidos son el AES y el DES, aunque este último a sufrido una serie de cambios a lo largo de los años debido a que podía llegar a ser desencriptado con relativa facilidad.
 En 1976 Diffie and Hellman propusieron un nuevo tipo de criptosistema, que denominaron **encriptación de clave pública**, este método está basado en funciones matemáticas y no en operaciones sobre patrones de bits. En este esquema se posee una clave privada de la que se deriva la clave pública, los mensajes a escriptar se encriptan con la clave pública y se desencriptan con la clave privada.
+Las bases de datos cuentan con varias funciones criptográficas que emplean algunos de estos algoritmos antes mencionados, los cuales pueden ser utilizados para ocultar información sensible.
