--- a/4º Año/Bases de Datos/Unidad 2/1. Modelo Entidad-Relacion.md
+++ b/4º Año/Bases de Datos/Unidad 2/1. Modelo Entidad-Relacion.md
@@ -1,5 +1,5 @@
 El modelo de entidad-relación se basa en la percepción del mundo real que consiste de un conjunto de objetos básicos llamados entidades y de relaciones entre esas entidades.
-Una ***entidad*** no es más que una cosa u objeto del mundo real que es distinguido entre todos los demás objetos. Por ejemplo, una persona, una empresa, entre otros. Por otro lado, se denomina ***conjunto de entidades*** a las agrupaciones de entidades de un mismo tipo. Por ejemplo, el conjunto de todas las personas, o de todas las empresas.
+Una ***entidad*** no es más que una cosa u objeto del mundo real que es distinguido entre los demás objetos. Por ejemplo, una persona, una empresa, entre otros. Por otro lado, se denomina ***conjunto de entidades*** a las agrupaciones de entidades de un mismo tipo. Por ejemplo, el conjunto de todas las personas, o de todas las empresas.
 Las entidades se representan mediante un conjunto de *atributos*, estos atributos describen propiedades que posee cada miembro de un conjunto de entidades. Existen distintos tipos de atributos:
 
 - Simples y Compuestos
@@ -9,7 +9,7 @@ Las entidades se representan mediante un conjunto de *atributos*, estos atributo
 >[!note] Atributos Derivados
 >Los atributos derivados son aquellos que pueden ser calculados a partir de otro atributo de la entidad, como por ejemplo la edad. Este tipo de atributos no suele ser almacenado en la base de datos.
 
-Una relación es una asociación que existe entre dos o más entidades. Se denomina ***conjunto de relaciones*** al conjunto de todas las relaciones que existen entre dos conjuntos de entidades. Al igual que las entidades, las relaciones también pueden tener atributos que describen a esta misma, aunque la existencia de estos van a depender de la cardinalidad entre las relaciones de las entidades.
+Una relación es una asociación que existe entre dos o más entidades. Se denomina ***conjunto de relaciones*** al conjunto de todas las relaciones que existen entre dos conjuntos de entidades. Al igual que las entidades, las relaciones también pueden tener atributos que describen a esta misma, aunque la existencia de estos van a depender del dominio del problema que se esté modelando.
 El ***grado*** de un *conjunto de relaciones* hace referencia a la cantidad de *conjuntos de entidades* que participan en dichas relaciones.
 
 ![[grado-relacion.png]]
@@ -19,14 +19,14 @@ Las ***restricciones***, por otro lado, expresan la cantidad de entidades a las 
 
 En bases de datos, las claves son atributos de las entidades que se utilizan para referirse a una entidad particular dentro de un *conjunto de entidades*, existen varios tipos de claves:
 
-- **Superclave**: Es el conjunto de una o más atributos cuyos valores determinan inequívocamente cada entidad, es decir, el valor de ese atributo o atributos son únicos para cada entidad del conjunto.
+- **Superclave**: Es el conjunto de una o más atributos cuyos valores determinan inequívocamente cada entidad, es decir, el valor de ese atributo o atributos son únicos para cada una de las entidad del conjunto.
 - **Clave Candidata**: Son los atributos de una entidad que son una superclave minimal, es decir, aspiran a convertirse en superclave.
 
 Aunque puedan existir varias claves candidatas, solo una de estas se establece como ***clave primaria***.
 
 >[!tldr] Claves para Conjuntos de Relaciones
 >La estructura de la clave primaria para el conjunto de relaciones depende de la correspondencia de cardinalidades asociada al conjunto de relaciones.
->- Si la relación es de varios a varios, la clave primaria del conjunto de relaciones estará compuesta por en par de 2 o $n$ elementos, cuyos componentes serán las claves primarias de las entidades que participan en la relación.
+>- Si la relación es de varios a varios, la clave primaria del conjunto de relaciones estará compuesta por en par de 2 o $n$ elementos, cuyos componentes serán las claves primarias de los conjuntos de entidades que participan en la relación.
 >- Si la relación es de uno a varios, la clave primaria del conjunto de relaciones estará compuesta por la clave primaria de la entidad con cardinalidad \*.
 
 ### Conjunto de Entidades Débiles
