--- a/4º Año/Bases de Datos/Unidad 2/3. Diseño de la Base de Datos.md
+++ b/4º Año/Bases de Datos/Unidad 2/3. Diseño de la Base de Datos.md
@@ -33,7 +33,7 @@ La forma de pasar estos diagramas a tablas va a variar de acuerdo al tipo de ent
 
 ![[uno-uno-total.png]]
 
-- Los atributos compuestos se representan de manera plana, separando un atributo por cada componente del atributo, es decir, cada componente del atributo se representa como una columna de la tabla.
+- Los atributos compuestos se representan de manera plana, separando un atributo por cada componente del atributo compuesto, es decir, cada componente del atributo se representa como una columna de la tabla.
 - Un atributo multivaluado $M$ de una entidad $E$ se representa con una tabla separada $M$ con una columna por cada uno de los atributos, tal que $\{A_M \cup CP_E\}$, donde $A_M$ hace referencia a los múltiples valores de $M$ y $CP_E$ corresponde al conjunto de atributos que corresponden la clave primaria de la tabla $E$, esto quiere decir que esta tabla no poseerá ninguna clave primaria.
 - Para las relaciones recursivas, es decir, aquellas entidades que tengan una relación consigo misma, se las va a representar de formas diferentes de acuerdo a la aridad que posea dicha relación.
 	- Si la relación es de uno a varios, se puede agregar un atributo más a la entidad que haga referencia, mediante su clave primaria, a otra fila de la tabla, por ejemplo, un empleado puede ser jefe de otros empleados, en este caso podemos agregar un atributo **jefe** a la tabla de empleados, la cual contendrá el identificador de otro empleado de la misma tabla.
