--- a/4º Año/Comunicaciones y Redes/Unidad 4/1. Capa de Red.md
+++ b/4º Año/Comunicaciones y Redes/Unidad 4/1. Capa de Red.md
@@ -1,4 +1,4 @@
-La función de la capa de red es simple, es la encargada de transporta paquetes desde un host emisor a un host receptor. En la realización de esta tarea podemos identificar dos importantes funciones de la capa de red:
+La función de la capa de red es simple, es la encargada de transportar paquetes desde un host emisor a un host receptor. En la realización de esta tarea podemos identificar dos importantes funciones de la capa de red:
 
 1. **Reenvío (forwarding)**: Cuando un paquete llega al enlace de entrada de un router, éste tiene que pasar el paquete al enlace de salida apropiado. Por ejemplo, un paquete que llega procedente de $H_1$ al router $R_1$ debe ser reenviado al siguiente router de la ruta hacia $H_2$, es decir, hacia su destino.
 2. **Enrutamiento (routing)**: La capa de red tiene que determinar la ruta o camino que deben seguir los distintos paquetes a medida que fluyen desde emisor al receptor. Los algoritmos que calculan estas rutas se conocen como ***algoritmos de enrutamiento***.
