Correcciones y complementando cosas | DB y Redes

--- a/4º Año/Bases de Datos/Unidad 4/1. Consultas SQL.md
+++ b/4º Año/Bases de Datos/Unidad 4/1. Consultas SQL.md
@@ -107,7 +107,7 @@ SELECT DISTINCT nombre_cliente
 
 >[!important] Operadores de Subconsultas
 >Los operadores de subconsultas son un tipo particular de cláusula que se utiliza generalmente en las comparaciones para ver si el valor cumple con ducha condición para la relación resultante de la subconsulta, estos operadores son los siguientes:
->- `SOME`: Este operador comprueba si algún valor de la relación resultante de la subconsulta satisface la condición de comparación, si esta se cumple para aunque sea un valor, entonces este operador devuelve verdadero.
+>- `SOME` / `ANY`: Este operador comprueba si algún valor de la relación resultante de la subconsulta satisface la condición de comparación, si esta se cumple para aunque sea un valor, entonces este operador devuelve verdadero.
 >- `ALL`: Comprueba que se satisfaga la condición de comparación para todos los valores de la relación resultante de la subconsulta, en caso de que uno de los valores de dicha relación no cumpla con la condición, el operador devuelve falso.
 >- `EXIST`: Verificar si el resultado de una subconsulta contiene al menos una fila, es decir, el resultado no es un conjunto vacío ($r \Leftrightarrow r \neq \varnothing$.). Se utiliza principalmente para condiciones donde necesitas comprobar si un conjunto de datos asociado tiene o no algún resultado.
 >	- Esta cláusula puede ser negada utilizando el operador lógico `NOT`.
