--- a/4º Año/Comunicaciones y Redes/Unidad 1/1. Conceptos Basicos.md
+++ b/4º Año/Comunicaciones y Redes/Unidad 1/1. Conceptos Basicos.md
@@ -87,6 +87,8 @@ Los PDU, o Unidades de Datos de Protocolo, son bloques de información que se ut
 
 ![[PDU-capas.png]]
 
+>[!caution] Tipos de Conexión entre las Capas
+>En ambos modelos, las capas de aplicación y de transporte establecen una conexión lógica de extremo a extremo entre ambos equipos, mientras que las capas de red, enlace de datos y la física la comunicación se realiza entre equipos o nodos adyacentes, esto es así ya que estas capas están mucho más cerca al hardware.
 ## Normalización y Estandarización de los Sistemas de Comunicación
 
 Las organizaciones de *normalización* definen las características de los equipos de conexión de redes y comunicaciones, los sistemas operativos y el software. Cada organización puede emitir una norma o recomendación, dichas normas pueden categorizarse de la siguiente manera:
