--- a/4º Año/Comunicaciones y Redes/Unidad 4/4. Enrutamiento IP.md
+++ b/4º Año/Comunicaciones y Redes/Unidad 4/4. Enrutamiento IP.md
@@ -44,3 +44,15 @@ Es un protocolo de vector de distancias que opera de una forma muy parecida a es
 Es un protocolo de estado de enlaces que utiliza la técnica de inundación de información de estado de los enlaces y el algoritmo de cálculo de la ruta de coste mínimo de Dijkstra. OSPF no establece una política para definir el peso de los enlaces, sino que proporciona mecanismos para determinar el enrutamiento de coste mínimo para el conjunto dado de pesos de los enlaces, es decir, el administrador de la red configura los costes de los enlaces individuales y el protocolo en base a eso se encarga de calcular el camino más corto.
 Al contrario que RIP, este protocolo esta implementado a nivel de red, esto quiere decir que tiene que implementar por sí mismo funcionalidades tales como la de transferencia fiable de mensajes y la de envío de mensajes de difusión acerca del estado de los enlaces, ya que no utiliza ninguno de los servicios de la capa de transporte. Además OSPF también comprueba que los enlaces estén operativos.
 Un sistema autónomo OSPF puede configurarse jerárquicamente en áreas. Cada área ejecuta su propio algoritmo de enrutamiento de estado de enlaces OSPF. Dentro de cada área, uno o más routers de frontera de área son responsables de enrutar los paquetes fuera del área. Para resolver la correspondencia entre áreas se configura un único área OSPF del sistema autónomo para actuar como área ***troncal***, cuya principal función es enrutar el tráfico entre las demás áreas del sistema autónomo.
+
+## Direccionamiento en la Capa de Enlace
+
+Todos lo nodos de la red que cuenten con un adaptador o placa de red, cuentan con una dirección de capa de enlace, que es utilizada para realizar redireccionamientos de tramas en redes de área local (LAN). A este tupo de direcciones se las conoce como direcciones LAN, direcciones físicas o direcciones MAC, estas poseen una longitud de 48 bits, y suelen mostrarse utilizando una notación hexadecimal. La principal particularidad de este tipo de direcciones es que son únicas para cada adaptador de red que exista en el mundo. La IEEE se encarga de gestionar y asignar los espacios de direcciones MAC, cuando una empresa quiere comenzar a fabricar adaptadores, compra a la IEEE una parte fija del campo de direcciones, la IEEE le asigna a la empresa los primeros 24 bits y deja los últimos 24 bits para que el fabricante pueda producir un determinado número de adaptadores.
+En sus inicios las direcciones MAC fueron diseñadas para ser permanentes, aunque hoy en día con el software apropiado estas direcciones pueden ser modificadas.
+Cuando un adaptador de red quiere enviar una trama a otro adaptador, inserta la la dirección MAC en la trama y luego al envía a través de la red LAN, esta trama es recibida y procesada por todos los adaptadores de la LAN. Cada adaptador realizara una comprobación para ver si la dirección MAC de destino coincide con la suya propia, si estas coinciden el adaptador extrae el paquete de la trama y lo envía a las capas superiores del protocolo, para entregárselo a su nodo padre. Pero si las direcciones no coinciden el adaptador de red descarta la trama, sin pasar el paquete hacia las capas superiores.
+
+>[!note] Mensajes de Difusión de la Capa de Enlace
+>Al igual que en la capa de red, los adaptadores de red pueden enviar una trama a todos los demás adaptadores de la red LAN utilizando la dirección de difusión FF-FF-FF-FF-FF-FF.
+
+###  Address Resolution Protocol (ARP)
+
